Restructured HTML & CSS accordingly. Added Javascript to add new contxt to button.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </header>
     <div class ="container">
         <nav>
+            <div class = "nav-icon">
+              =
+            </div>
             <div class = "home">
                 Home
             </div>
@@ -30,14 +33,32 @@
             </div>
         </nav>
         <main>
-            <h1 class = "welcome">
-                Welcome... 
-            </h1>
-            <button class = "data">
+          <div class = "container3">
+            <h3 class = "welcome">
+                Welcome to Outer Heaven. You made it early. We are still initializing our data. Click below to get briefed: 
+            </h3>
+            <button class = "data" aria-label = "Special-button">
+              <span id = "button-text">
                 RETRIEVE DATA
+              </span>
             </button>
+            </div>
+            <div class = "container2">
+              <div class = "sign-up">
+                If you would like to stay updated. Click here!: 
+                <button class = "sign">
+                  Here
+                </button>
+            </div>
+            <div class = "candidate">
+                If you'd like to be considered as a candidate. Click here!
+                <button class = "for-candidate">
+                  Candidates!
+                </button>
+            </div>
+          </div>
         </main>
-    </div>
+    </div>   
     <footer>
         <div class = "reserved">
             all rights reserved
@@ -46,5 +67,8 @@
             Copyright 2023 Outer Heaven: Virtual
         </div>
     </footer>
+    <script src = "script.js">
+        
+    </script>
 </body>
 </html>
