--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
             <div class = "container2">
               <div class = "sign-up">
                 If you would like to stay updated. Click here!: 
-                <button class = "sign">
+                <button onclick = "window.open('https://forms.gle/1b6vH2MhUDvkyeqa8')" rel = "noopener noreferrer" class = "sign">
                   Here
                 </button>
             </div>
             <div class = "candidate">
                 If you'd like to be considered as a candidate. Click here!
-                <button class = "for-candidate">
+                <button onclick = "window.open('https://forms.gle/vUfZau3JRmA1Y9pi6')" rel = "noopener noreferrer" class = "for-candidate">
                   Candidates!
                 </button>
             </div>
